--- a/a_exploracion.ipynb
+++ b/a_exploracion.ipynb
@@ -6,7 +6,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, median_absolute_error\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from matplotlib.pyplot import figure"
    ]
   },
   {
@@ -39,7 +52,7 @@
    "outputs": [],
    "source": [
     "# Leer el archivo CSV\n",
-    "df = pd.read_csv(\"data/datos_historicos.csv\")"
+    "df_historico = pd.read_csv(\"data/datos_historicos.csv\")"
    ]
   },
   {
@@ -216,22 +229,22 @@
     }
    ],
    "source": [
-    "df.head()"
+    "df_historico.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calcular estadísticos descriptivos \n",
     "## 'NumberOfTimesPastDue' Número de veces que el individuo ha tenido pagos atrasados\n",
-    "mean_past_due = df['NumberOfTimesPastDue'].mean()\n",
-    "std_past_due = df['NumberOfTimesPastDue'].std()\n",
-    "min_past_due = df['NumberOfTimesPastDue'].min()\n",
-    "max_past_due = df['NumberOfTimesPastDue'].max()\n",
-    "percentiles = df['NumberOfTimesPastDue'].quantile([0.25, 0.5, 0.75])"
+    "mean_past_due = df_historico['NumberOfTimesPastDue'].mean()\n",
+    "std_past_due = df_historico['NumberOfTimesPastDue'].std()\n",
+    "min_past_due = df_historico['NumberOfTimesPastDue'].min()\n",
+    "max_past_due = df_historico['NumberOfTimesPastDue'].max()\n",
+    "percentiles = df_historico['NumberOfTimesPastDue'].quantile([0.25, 0.5, 0.75])"
    ]
   },
   {
@@ -289,7 +302,7 @@
    "outputs": [],
    "source": [
     "# Aplicar la clasificación al DataFrame\n",
-    "df['Riesgo'] = df['NumberOfTimesPastDue'].apply(clasificar_riesgo)"
+    "df_historico['Riesgo'] = df_historico['NumberOfTimesPastDue'].apply(clasificar_riesgo)"
    ]
   },
   {
@@ -312,12 +325,12 @@
    ],
    "source": [
     "# Mostrar los resultados de clasificación\n",
-    "print(df['Riesgo'].value_counts())"
+    "print(df_historico['Riesgo'].value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -489,13 +502,13 @@
        "4                      5    0.343376  Riesgo muy alto  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(5)"
+    "df_historico.head(5)"
    ]
   },
   {
@@ -505,7 +518,7 @@
    "outputs": [],
    "source": [
     "# Guardar el DataFrame con la nueva columna 'Riesgo' en un archivo CSV\n",
-    "df.to_csv(\"data/datos_historicos_clasificados.csv\", index=False)"
+    "df_historico.to_csv(\"data/datos_historicos_clasificados.csv\", index=False)"
    ]
   }
  ],
