--- a/a_exploracion.ipynb
+++ b/a_exploracion.ipynb
@@ -2267,17 +2267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Los exportamos al archivo\n",
-    "df_resultados.to_csv('grupo_4.csv', index=False)"
+    "df_resultados.to_csv('data/grupo_4.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -2400,14 +2400,14 @@
        "[1058 rows x 2 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Esto es solo para comprobar que los resultados estén en el formato correcto\n",
-    "df_grupo_4 = pd.read_csv(\"grupo_4.csv\")\n",
+    "df_grupo_4 = pd.read_csv(\"data/grupo_4.csv\")\n",
     "print(df_grupo_4.head(10))\n",
     "df_grupo_4.shape\n",
     "df_grupo_4"
